@@ -1,11 +1,0 @@
-## The "S" is for "Signs" ##
-
-*SOAuth* is a Ruby library that **creates HTTP headers for OAuth Authorization**
-using previously-obtained OAuth keys/secrets.  Useful if you want to make your
-own HTTP request objects instead of using the ones created for you using the
-[commonly-used OAuth gem](security/ruby-oauth).
-
-It should be noted that this was developed without edge cases in mind -- it was
-pretty much abstracted from my "by-hand" signing of OAuth requests in [Prey
-Fetcher](http://preyfetcher.com), so don't consider it production-quality code
-(though it [is running in production](http://preyfetcher.com)).
