@@ -1,12 +1,0 @@
-# $NetBSD: Makefile,v 1.2 2010/09/10 07:47:05 taca Exp $
-
-DISTNAME=	soauth-0.2
-CATEGORIES=	security
-
-MAINTAINER=	obache@NetBSD.org
-HOMEPAGE=	http://github.com/tofumatt/soauth
-COMMENT=	Ruby library that creates HTTP headers for OAuth Authorization
-LICENSE=	mit
-
-.include "../../lang/ruby/gem.mk"
-.include "../../mk/bsd.pkg.mk"
