@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.1.1.1 2010/08/03 04:55:10 obache Exp $
-
-SHA1 (soauth-0.2.gem) = 44a666d6e388593f9ad1c5ac9612313a779a5e6f
-RMD160 (soauth-0.2.gem) = 0c3f87be9376dbfe015f58e83c0d46e99ec22582
-Size (soauth-0.2.gem) = 7680 bytes
